static/css/custom.css
/* Global Styles */
p, ul, blockquote {
  margin-top: 8px;
  margin-bottom: 8px;
}

ul, ol {
  padding-inline-start: 0px;
  margin-left: 1em;
}

li {
  margin-left: 0.1em;
}

/* Layout Styles */
.row {
  display: flex;
  justify-content: center;
}

.box {
  margin: 0 auto;
}

/* Gallery Styles */
.gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

/* Media Styles */
audio {
  width: 100%;
  margin-top: 8px;
  margin-bottom: 8px;
  max-width:768px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

/* Details and Summary Styles */
details, summary, table {
  margin-top: 8px;
  margin-bottom: 8px;
}

/* Blockquote Styles */
blockquote p {
  margin-top: 8px;
  margin-bottom: 8px !important;
}

/* Box Masonry Text Styles */
.box-masonry-text h4 {
  margin-top: 0px;
  margin-bottom: 5.5px;
}

/* Table Styles */
table {
  width: 100%;
  border-collapse: collapse;
}

td, th {
  padding: 0.3rem 1rem;
  border: 1px solid #000000;
  color: #555555;
}

th {
  font-weight: bold;
  font-size: 1em;
  text-align: center;
  color: #000000;
}

/* Comment Styles - fix list bullet*/
.atk-comment-count ul li::before {
  content: '';
  margin: 0px;
}

/* Video Styles */
video {
  width: 100%;
  margin-top: 8px;
  margin-bottom: 8px;
  max-width:768px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

